# dfm

./: Cargo.toml  DOTBUILD.example  DOTBUILD.md  DOTINFO.md  README.md  dfm
src/: dotinfo.rs  lib.rs
tests/: example_info.hjson  example_info.json  test_serialize.rs
