[package]
name = "dfm"
version = "0.1.0"
authors = ["Avimitin <avimitin@gmail.com>"]
edition = "2021"
description = "Yet another dotfile manager"
license = "AGPLv3"
repository = "https://github.com/Avimitin/dfm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0.30"
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"]}
